--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -3,6 +3,7 @@
   src: url("/fonts/Nohemi-Black.woff") format("woff");
   font-weight: 900; /* Black */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("/fonts/Nohemi-Bold.woff") format("woff");
   font-weight: 700; /* Bold */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url("/fonts/Nohemi-ExtraBold.woff") format("woff");
   font-weight: 800; /* Extra Bold */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url("/fonts/Nohemi-SemiBold.woff") format("woff");
   font-weight: 600; /* Semi Bold */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
   src: url("/fonts/Nohemi-Medium.woff") format("woff");
   font-weight: 500; /* Medium */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -38,6 +43,7 @@
   src: url("/fonts/Nohemi-Regular.woff") format("woff");
   font-weight: 400; /* Regular */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -45,6 +51,7 @@
   src: url("/fonts/Nohemi-Light.woff") format("woff");
   font-weight: 300; /* Light */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -52,6 +59,7 @@
   src: url("/fonts/Nohemi-ExtraLight.woff") format("woff");
   font-weight: 200; /* Extra Light */
   font-style: normal;
+  descent-override: 0%;
 }
 
 @font-face {
@@ -59,4 +67,5 @@
   src: url("/fonts/Nohemi-Thin.woff") format("woff");
   font-weight: 100; /* Thin */
   font-style: normal;
+  descent-override: 0%;
 }
