--- a/src/components/common/HowToUse/HowToUse.css
+++ b/src/components/common/HowToUse/HowToUse.css
@@ -6,55 +6,30 @@
   background-repeat: no-repeat; 
   padding: 30px;
   height: '95px';
+  top: '90px';
   width: '100%'
 }
   
-  .flex-container {
-    display: flex;
-    width: 100%;
-    padding: 10px;
-    gap: 60px;
-    justify-content: center;
-  }
-
-  .tokens {
-    display: flex;
-    justify-content: space-around;
-    font-size: 10px;
-    margin-top: -20px;
-    margin-left: -30px;
-    width: 100%;
-    gap: 9px
-  }
-
-  .points {
-    display: flex;
-    justify-content: space-around;
-    font-size: 10px;
-    margin-top: -20px;
-    margin-left: -30px;
-    width: 100%;
-    height: 45px;
-    gap: 9px
-  }
-
-  .rewards {
-    display: flex;
-    justify-content: space-around;
-    font-size: 10px;
-    margin-top: -20px;
-    margin-left: -30px;
-    width: 100%;
-    gap: 9px
-  }
+.flex-container {
+  display: flex;
+  width: 100%;
+  padding: 5px;
+  gap: 40px;
+  justify-content: space-between;
+  font-size: 10px;
+  margin-top: -11px;
+  margin-left: -10px;
+  gap: 10px;
+  font-weight: 500;
+}
 
 
   .token-image, .point-image, .reward-image {
     top: 35px;
     left: 110px;
-    padding-top: 8px;
+    padding-top: 11px;
     padding-left: 1px
-  }p
+  }
 
   .tokens h5, .points h5, .rewards h5 {
     font-size: 10px;
